# Satwave

./: .gitignore  README.md  debug-pw-streams.sh  meson.build
data/: com.github.satwave.gschema.xml  satwave.gresource.xml  style.css
src/: main.c  satwave-api-client.c  satwave-api-client.h  satwave-application.c  satwave-application.h  satwave-auth.c  satwave-auth.h  satwave-call-monitor.c  satwave-call-monitor.h  satwave-channel-store.c  satwave-channel-store.h  satwave-channel.c  satwave-channel.h  satwave-hls-proxy.c  satwave-hls-proxy.h  satwave-login-dialog.c  satwave-login-dialog.h  satwave-mpris.c  satwave-mpris.h  satwave-player.c  satwave-player.h  satwave-tray.c  satwave-tray.h  satwave-window.c  satwave-window.h
